decaf_PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  SwitchBlock : '{' CaseList DefaultReceiver '}'

  26  CaseBlock : StmtList

  27  StmtList : StmtList Stmt
  28           |

  29  Stmt : VariableDef
  30       | SimpleStmt ';'
  31       | IfStmt
  32       | WhileStmt
  33       | ForStmt
  34       | RepeatStmt
  35       | SwitchStmt
  36       | SelfIncStmt ';'
  37       | SelfDecStmt ';'
  38       | ReturnStmt ';'
  39       | PrintStmt ';'
  40       | BreakStmt ';'
  41       | StmtBlock

  42  SimpleStmt : LValue '=' Expr
  43             | Call
  44             |

  45  Receiver : Expr '.'
  46           |

  47  LValue : Receiver IDENTIFIER
  48         | Expr '[' Expr ']'

  49  Call : Receiver IDENTIFIER '(' Actuals ')'

  50  Expr : LValue
  51       | Call
  52       | Constant
  53       | Expr '+' Expr
  54       | Expr '-' Expr
  55       | Expr '*' Expr
  56       | Expr '/' Expr
  57       | Expr '%' Expr
  58       | Expr EQUAL Expr
  59       | Expr NOT_EQUAL Expr
  60       | Expr '<' Expr
  61       | Expr '>' Expr
  62       | Expr LESS_EQUAL Expr
  63       | Expr GREATER_EQUAL Expr
  64       | Expr AND Expr
  65       | Expr OR Expr
  66       | '(' Expr ')'
  67       | '-' Expr
  68       | '!' Expr
  69       | SELF_INC Expr
  70       | Expr SELF_INC
  71       | SELF_DEC Expr
  72       | Expr SELF_DEC
  73       | Expr '?' Expr ':' Expr
  74       | READ_INTEGER '(' ')'
  75       | READ_LINE '(' ')'
  76       | THIS
  77       | NEW IDENTIFIER '(' ')'
  78       | NEW Type '[' Expr ']'
  79       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  80       | '(' CLASS IDENTIFIER ')' Expr

  81  Constant : LITERAL
  82           | NULL

  83  Actuals : ExprList
  84          |

  85  ExprList : ExprList ',' Expr
  86           | Expr

  87  WhileStmt : WHILE '(' Expr ')' Stmt

  88  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  89  RepeatStmt : REPEAT Stmt UNTIL '(' Expr ')'

  90  SwitchStmt : SWITCH '(' Expr ')' SwitchBlock

  91  CaseList : CaseList CaseStmt
  92           |

  93  DefaultReceiver : DefaultStmt
  94                  |

  95  CaseStmt : CASE Constant ':' CaseBlock

  96  DefaultStmt : DEFAULT ':' CaseBlock

  97  SelfIncStmt : SELF_INC Expr
  98              | Expr SELF_INC

  99  SelfDecStmt : SELF_DEC Expr
 100              | Expr SELF_DEC

 101  BreakStmt : BREAK

 102  IfStmt : IF '(' Expr ')' Stmt ElseClause

 103  ElseClause : ELSE Stmt
 104             |

 105  ReturnStmt : RETURN Expr
 106             | RETURN

 107  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (28)

	.  reduce 28

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (27)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 41
	'}'  shift 63
	SELF_INC  shift 64
	SELF_DEC  shift 65
	SWITCH  shift 66
	IDENTIFIER  reduce 46
	';'  reduce 44

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	ForStmt  goto 73
	RepeatStmt  goto 74
	SwitchStmt  goto 75
	SelfIncStmt  goto 76
	SelfDecStmt  goto 77
	ReturnStmt  goto 78
	PrintStmt  goto 79
	BreakStmt  goto 80
	LValue  goto 81
	Expr  goto 82
	Call  goto 83
	Receiver  goto 84
	Constant  goto 85


state 46
	Constant : NULL .  (82)

	.  reduce 82


state 47
	Expr : THIS .  (76)

	.  reduce 76


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (87)

	'('  shift 86
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (88)

	'('  shift 87
	.  error


state 50
	RepeatStmt : REPEAT . Stmt UNTIL '(' Expr ')'  (89)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 41
	SELF_INC  shift 64
	SELF_DEC  shift 65
	SWITCH  shift 66
	IDENTIFIER  reduce 46
	';'  reduce 44

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 88
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	ForStmt  goto 73
	RepeatStmt  goto 74
	SwitchStmt  goto 75
	SelfIncStmt  goto 76
	SelfDecStmt  goto 77
	ReturnStmt  goto 78
	PrintStmt  goto 79
	BreakStmt  goto 80
	LValue  goto 81
	Expr  goto 82
	Call  goto 83
	Receiver  goto 84
	Constant  goto 85


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (102)

	'('  shift 89
	.  error


state 52
	ReturnStmt : RETURN . Expr  (105)
	ReturnStmt : RETURN .  (106)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46
	';'  reduce 106

	LValue  goto 92
	Expr  goto 93
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 53
	BreakStmt : BREAK .  (101)

	.  reduce 101


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (77)
	Expr : NEW . Type '[' Expr ']'  (78)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 95
	.  error

	Type  goto 96


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (107)

	'('  shift 97
	.  error


state 56
	Expr : READ_INTEGER . '(' ')'  (74)

	'('  shift 98
	.  error


state 57
	Expr : READ_LINE . '(' ')'  (75)

	'('  shift 99
	.  error


state 58
	Constant : LITERAL .  (81)

	.  reduce 81


state 59
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (79)

	'('  shift 100
	.  error


state 60
	Expr : '-' . Expr  (67)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 101
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 61
	Expr : '!' . Expr  (68)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 102
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 62
	Expr : '(' . Expr ')'  (66)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (80)
	Receiver : .  (46)

	CLASS  shift 103
	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 104
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 63
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 64
	Expr : SELF_INC . Expr  (69)
	SelfIncStmt : SELF_INC . Expr  (97)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 105
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 65
	Expr : SELF_DEC . Expr  (71)
	SelfDecStmt : SELF_DEC . Expr  (99)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 106
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 66
	SwitchStmt : SWITCH . '(' Expr ')' SwitchBlock  (90)

	'('  shift 107
	.  error


state 67
	Stmt : VariableDef .  (29)

	.  reduce 29


state 68
	Stmt : StmtBlock .  (41)

	.  reduce 41


state 69
	StmtList : StmtList Stmt .  (27)

	.  reduce 27


state 70
	Stmt : SimpleStmt . ';'  (30)

	';'  shift 108
	.  error


state 71
	Stmt : IfStmt .  (31)

	.  reduce 31


state 72
	Stmt : WhileStmt .  (32)

	.  reduce 32


state 73
	Stmt : ForStmt .  (33)

	.  reduce 33


state 74
	Stmt : RepeatStmt .  (34)

	.  reduce 34


state 75
	Stmt : SwitchStmt .  (35)

	.  reduce 35


state 76
	Stmt : SelfIncStmt . ';'  (36)

	';'  shift 109
	.  error


state 77
	Stmt : SelfDecStmt . ';'  (37)

	';'  shift 110
	.  error


state 78
	Stmt : ReturnStmt . ';'  (38)

	';'  shift 111
	.  error


state 79
	Stmt : PrintStmt . ';'  (39)

	';'  shift 112
	.  error


state 80
	Stmt : BreakStmt . ';'  (40)

	';'  shift 113
	.  error


state 81
	SimpleStmt : LValue . '=' Expr  (42)
	Expr : LValue .  (50)

	'='  shift 114
	AND  reduce 50
	OR  reduce 50
	LESS_EQUAL  reduce 50
	GREATER_EQUAL  reduce 50
	EQUAL  reduce 50
	NOT_EQUAL  reduce 50
	'+'  reduce 50
	'-'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	'%'  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	'.'  reduce 50
	'['  reduce 50
	SELF_INC  reduce 50
	SELF_DEC  reduce 50
	'?'  reduce 50


state 82
	Receiver : Expr . '.'  (45)
	LValue : Expr . '[' Expr ']'  (48)
	Expr : Expr . '+' Expr  (53)
	Expr : Expr . '-' Expr  (54)
	Expr : Expr . '*' Expr  (55)
	Expr : Expr . '/' Expr  (56)
	Expr : Expr . '%' Expr  (57)
	Expr : Expr . EQUAL Expr  (58)
	Expr : Expr . NOT_EQUAL Expr  (59)
	Expr : Expr . '<' Expr  (60)
	Expr : Expr . '>' Expr  (61)
	Expr : Expr . LESS_EQUAL Expr  (62)
	Expr : Expr . GREATER_EQUAL Expr  (63)
	Expr : Expr . AND Expr  (64)
	Expr : Expr . OR Expr  (65)
	Expr : Expr . SELF_INC  (70)
	Expr : Expr . SELF_DEC  (72)
	Expr : Expr . '?' Expr ':' Expr  (73)
	SelfIncStmt : Expr . SELF_INC  (98)
	SelfDecStmt : Expr . SELF_DEC  (100)

	AND  shift 115
	OR  shift 116
	LESS_EQUAL  shift 117
	GREATER_EQUAL  shift 118
	EQUAL  shift 119
	NOT_EQUAL  shift 120
	'+'  shift 121
	'-'  shift 122
	'*'  shift 123
	'/'  shift 124
	'%'  shift 125
	'>'  shift 126
	'<'  shift 127
	'.'  shift 128
	'['  shift 129
	SELF_INC  shift 130
	SELF_DEC  shift 131
	'?'  shift 132
	.  error


state 83
	SimpleStmt : Call .  (43)
	Expr : Call .  (51)

	AND  reduce 51
	OR  reduce 51
	LESS_EQUAL  reduce 51
	GREATER_EQUAL  reduce 51
	EQUAL  reduce 51
	NOT_EQUAL  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	'.'  reduce 51
	';'  reduce 43
	')'  reduce 43
	'['  reduce 51
	SELF_INC  reduce 51
	SELF_DEC  reduce 51
	'?'  reduce 51


state 84
	LValue : Receiver . IDENTIFIER  (47)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (49)

	IDENTIFIER  shift 133
	.  error


state 85
	Expr : Constant .  (52)

	.  reduce 52


state 86
	WhileStmt : WHILE '(' . Expr ')' Stmt  (87)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 134
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 87
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (88)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46
	';'  reduce 44

	SimpleStmt  goto 135
	LValue  goto 81
	Expr  goto 136
	Call  goto 83
	Receiver  goto 84
	Constant  goto 85


state 88
	RepeatStmt : REPEAT Stmt . UNTIL '(' Expr ')'  (89)

	UNTIL  shift 137
	.  error


state 89
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (102)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 138
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 90
	Expr : SELF_INC . Expr  (69)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 139
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 91
	Expr : SELF_DEC . Expr  (71)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 140
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 92
	Expr : LValue .  (50)

	.  reduce 50


state 93
	Receiver : Expr . '.'  (45)
	LValue : Expr . '[' Expr ']'  (48)
	Expr : Expr . '+' Expr  (53)
	Expr : Expr . '-' Expr  (54)
	Expr : Expr . '*' Expr  (55)
	Expr : Expr . '/' Expr  (56)
	Expr : Expr . '%' Expr  (57)
	Expr : Expr . EQUAL Expr  (58)
	Expr : Expr . NOT_EQUAL Expr  (59)
	Expr : Expr . '<' Expr  (60)
	Expr : Expr . '>' Expr  (61)
	Expr : Expr . LESS_EQUAL Expr  (62)
	Expr : Expr . GREATER_EQUAL Expr  (63)
	Expr : Expr . AND Expr  (64)
	Expr : Expr . OR Expr  (65)
	Expr : Expr . SELF_INC  (70)
	Expr : Expr . SELF_DEC  (72)
	Expr : Expr . '?' Expr ':' Expr  (73)
	ReturnStmt : RETURN Expr .  (105)

	AND  shift 115
	OR  shift 116
	LESS_EQUAL  shift 117
	GREATER_EQUAL  shift 118
	EQUAL  shift 119
	NOT_EQUAL  shift 120
	'+'  shift 121
	'-'  shift 122
	'*'  shift 123
	'/'  shift 124
	'%'  shift 125
	'>'  shift 126
	'<'  shift 127
	'.'  shift 128
	'['  shift 129
	SELF_INC  shift 141
	SELF_DEC  shift 142
	'?'  shift 132
	';'  reduce 105


state 94
	Expr : Call .  (51)

	.  reduce 51


state 95
	Expr : NEW IDENTIFIER . '(' ')'  (77)

	'('  shift 143
	.  error


state 96
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (78)

	'['  shift 144
	.  error


state 97
	PrintStmt : PRINT '(' . ExprList ')'  (107)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 145
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85
	ExprList  goto 146


state 98
	Expr : READ_INTEGER '(' . ')'  (74)

	')'  shift 147
	.  error


state 99
	Expr : READ_LINE '(' . ')'  (75)

	')'  shift 148
	.  error


state 100
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (79)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	SELF_INC  shift 90
	SELF_DEC  shift 91
	IDENTIFIER  reduce 46

	LValue  goto 92
	Expr  goto 149
	Call  goto 94
	Receiver  goto 84
	Constant  goto 85


state 101
	Receiver : Expr . '.'  (45)
	LValue : Expr . '[' Expr ']'  (48)
	Expr : Expr . '+' Expr  (53)
	Expr : Expr . '-' Expr  (54)
	Expr : Expr . '*' Expr  (55)
	Expr : Expr . '/' Expr  (56)
	Expr : Expr . '%' Expr  (57)
	Expr : Expr . EQUAL Expr  (58)
	Expr : Expr . NOT_EQUAL Expr  (59)
	Expr : Expr . '<' Expr  (60)
	Expr : Expr . '>' Expr  (61)
	Expr : Expr . LESS_EQUAL Expr  (62)
	Expr : Expr . GREATER_EQUAL Expr  (63)
	Expr : Expr . AND Expr  (64)
	Expr : Expr . OR Expr  (65)
	Expr : '-' Expr .  (67)
	Expr : Expr . SELF_INC  (70)
	Expr : Expr . SELF_DEC  (72)
	Expr : Expr . '?' Expr ':' Expr  (73)

	'.'  shift 128
	'['  shift 129
	SELF_INC  shift 141
	SELF_DEC  shift 142
	AND  reduce 67
	OR  reduce 67
	LESS_EQUAL  reduce 67
	GREATER_EQUAL  reduce 67
	EQUAL  reduce 67
	NOT_EQUAL  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	','  reduce 67
	';'  reduce 67
	')'  reduce 67
	']'  reduce 67
	'?'  reduce 67
	':'  reduce 67


state 102
	Receiver : Expr . '.'  (45)
	LValue : Expr . '[' Expr ']'  (48)
	Expr : Expr . '+' Expr  (53)
	Expr : Expr . '-' Expr  (54)
	Expr : Expr . '*' Expr  (55)
	Expr : Expr . '/' Expr  (56)
	Expr : Expr . '%' Expr  (57)
	Expr : Expr . EQUAL Expr  (58)
	Expr : Expr . NOT_EQUAL Expr  (59)
	Expr : Expr . '<' Expr  (60)
	Expr : Expr . '>' Expr  (61)
	Expr : Expr . LESS_EQUAL Expr  (62)
	Expr : Expr . GREATER_EQUAL Expr  (63)
	Expr : Expr . AND Expr  (64)
	Expr : Expr . OR Expr  (65)
	Expr : '!' Expr .  (68)
	Expr : Expr . SELF_INC  (70)
	Expr : Expr . SELF_DEC  (72)
	Expr : Expr . '?' Expr ':' Expr  (73)

	'.'  shift 128
	'['  shift 129
	SELF_INC  shift 141
	SELF_DEC  shift 142
	AND  reduce 68
	OR  reduce 68
	LESS_EQUAL  reduce 68
	GREATER_EQUAL  reduce 68
	EQUAL  reduce 68
	NOT_EQUAL  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	'>'  reduce 68
	'<'  reduce 68
	','  reduce 68
	';'  reduce 68
	')'  reduce 68
	']'  reduce 68
	'?'  reduce 68
	':'  reduce 68


state 103
	Expr : '(' CLASS . IDENTIFIER ')' Expr  (80)

	IDENTIFIER  shift 150
	.  error

